<resources>
    <string name="app_name" translatable="false">HangoverClock</string>
    <string name="createwidget">Create Widget</string>
    <string name="savebutton">Save</string>
    <string name="inputoverhangminutes">minutes</string>
    <string name="use12h">Use 12h format</string>
    <string name="defaultfonttext">default</string>
    <string name="enablesecondsswitch">Enable seconds</string>
    <string name="secondsresourceheavywarning">Using seconds is a big system load and is not recommended!</string>
    <string name="enabledateswitch">Enable Date</string>
    <string name="inputoverhangday">days</string>
    <string name="usesystemtimeformat">Use system timeformat</string>
    <string name="overhangheader">Overhang</string>
    <string name="inputoverhanghours">hours</string>
    <string name="inputoverhangmonths">months</string>
    <string name="colorheader">Colors</string>
    <string name="settingsheader">Settings</string>
    <string name="fontheader">Fonts</string>
    <string name="accessibilityClockPreviewString">Widget Preview</string>
    <string name="inputoverhangseconds">seconds</string>
    <string name="xposed_description" translatable="false">HangoverClock Xposed Module</string>
    <string name="settings_title">HangoverClock Settings</string>
    <string name="settings_widget_title">Widgets</string>
    <string name="settings_widget_button">Open Widget List</string>
    <string name="settings_daydream_title">Daydream</string>
    <string name="settings_daydream_button">Open Daydream Settings</string>
    <string name="settings_xposednotcompatible">You need Android 10 or higher and XPosed for changing statusbar and lockscreen clocks.</string>
    <string name="settings_xposednotinstalled">You need an active XPosed framework for changing statusbar and lockscreen clocks.</string>
    <string name="settings_statusbar_title">Statusbar</string>
    <string name="settings_switch_enabled">Enabled</string>
    <string name="settings_textbased">Text Based</string>
    <string name="settings_imagebased">Image Based</string>
    <string name="settings_statusbar_button">Configure Statusbar Clock</string>
    <string name="settings_lockscreen_title">Lockscreen</string>
    <string name="settings_lockscreen_button">Configure Lockscreen Clock</string>
    <string name="settings_systemui_restart_description">To apply changes, you might need to restart SystemUI. (root access needed)</string>
    <string name="settings_systemui_restart_button">Restart SystemUI</string>
    <string name="settings_widget_activity_title">Widget Settings</string>
    <string name="settings_widget_activity_listitem_title">Widget %1$d</string>
    <string name="settings_nowidgetsfound">No widgets found. To add a widget to your homescreen, long press on a free place, select widgets and press and hold on HangoverClock.</string>
</resources>
