<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/previewclock"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:adjustViewBounds="true"
        android:background="#808080"
        android:contentDescription="@string/accessibilityClockPreviewString" />

    <View
        android:id="@+id/divider23"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/overhangheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/overhangheader" />

    <LinearLayout
        android:id="@+id/overhanginputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputoverhangmonths">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/overhanginputdatemonths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputoverhangday">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/overhanginputdatedays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputoverhanghours">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/overhanginputtimehours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputoverhangminutes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/overhanginputtimeminutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputoverhangseconds">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/overhanginputtimeseconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider24"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/colorheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/colorheader"
        android:textAllCaps="false" />

    <TableLayout
        android:id="@+id/colorselector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <SeekBar
                android:id="@+id/seekbarred"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="255"
                android:progress="1" />

            <View
                android:id="@+id/viewred"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <SeekBar
                android:id="@+id/seekbarblue"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="255"
                android:progress="1" />

            <View
                android:id="@+id/viewblue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <SeekBar
                android:id="@+id/seekbargreen"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="255"
                android:progress="1" />

            <View
                android:id="@+id/viewgreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <SeekBar
                android:id="@+id/seekbaralpha"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="255"
                android:progress="255" />

            <View
                android:id="@+id/viewalpha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/viewcolor"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_weight="1" />
        </TableRow>

    </TableLayout>

    <View
        android:id="@+id/divider25"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="invisible" />

    <View
        android:id="@+id/divider26"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/settingsheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/settingsheader" />

    <LinearLayout
        android:id="@+id/switchlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Switch
            android:id="@+id/autohourselector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@bool/widgetdefaultautotimeselector"
            android:switchPadding="10dp"
            android:text="@string/usesystemtimeformat" />

        <Switch
            android:id="@+id/hourselector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:switchPadding="10dp"
            android:text="@string/use12h" />

        <Switch
            android:id="@+id/secondsselector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:switchPadding="10dp"
            android:text="@string/enablesecondsswitch" />

        <TextView
            android:id="@+id/secondsinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondsresourceheavywarning"
            android:textColor="#FFAF00"
            android:visibility="gone" />

        <Switch
            android:id="@+id/dateselector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:switchPadding="10dp"
            android:text="@string/enabledateswitch" />

        <SeekBar
            android:id="@+id/datefontsizeseekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="@integer/maxfontscale"
            android:progress="@integer/widgetdefaultfontscale" />
    </LinearLayout>

    <View
        android:id="@+id/divider27"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/fontheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/fontheader" />

    <Spinner
        android:id="@+id/fontspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownWidth="wrap_content"
        android:spinnerMode="dialog"
        android:visibility="visible" />

    <View
        android:id="@+id/divider28"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>